# actix-web-rust-embed-responder

./: .all-contributorsrc  .gitignore  Cargo.toml  README.md  Readme.md
.github/: test.yml
.github/workflows/: docs.yml  release.yml  test.yml
benches/: basic_page.rs  cached.rs  head.rs  html_page.rs  html_page_with_compression.rs  image.rs  mix.rs
benches/common/: mod.rs
benches/reports/: index.html
benches/reports/cached responses only/: index.html
benches/reports/cached responses only/rust_embed/: index.html
benches/reports/cached responses only/rust_embed_for_web/: index.html
benches/reports/get html page, with compression/: index.html
benches/reports/get html page, with compression/rust_embed/: index.html
benches/reports/get html page, with compression/rust_embed_for_web/: index.html
benches/reports/html page, no compression/rust_embed/: index.html
benches/reports/html page, no compression/rust_embed_for_web/: index.html
benches/reports/image file/: index.html
benches/reports/image file/rust_embed/: index.html
benches/reports/image file/rust_embed_for_web/: index.html
benches/reports/mixture of cached and non-cached responses/rust_embed/: index.html
benches/reports/mixture of cached and non-cached responses/rust_embed_for_web/: index.html
docs/: style.css
docs/reports/cached responses only/rust_embed/: history.html  index.html
docs/reports/cached responses only/rust_embed_for_web/: history.html  index.html
docs/reports/get html page, with compression/rust_embed/: history.html  index.html
docs/reports/get html page, with compression/rust_embed_for_web/: history.html  index.html
docs/reports/html page, no compression/: index.html
docs/reports/html page, no compression/rust_embed/: history.html  index.html
docs/reports/html page, no compression/rust_embed_for_web/: history.html  index.html
docs/reports/image file/rust_embed/: history.html  index.html
docs/reports/image file/rust_embed_for_web/: history.html  index.html
docs/reports/mixture of cached and non-cached responses/: index.html
docs/reports/mixture of cached and non-cached responses/rust_embed/: history.html  index.html
docs/reports/mixture of cached and non-cached responses/rust_embed_for_web/: history.html  index.html
examples/: rust_embed.rs  rust_embed_for_web.rs
examples/assets/: index.html  style.css
src/: compress.rs  embed.rs  helper.rs  lib.rs  parse.rs  rust_embed.rs  rust_embed_for_web.rs
tests/: compression-options.rs  custom-404.rs
